# bozDiscovery

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  groups  project.config  project_ver.cmake  tools.cmake
ext_build/: .directory  Makefile  Makefile.kc  boz-build.cmake  boz-doc.cmake  boz-test-macros.cmake  boz-vars.cmake  create_s6EnvVars.sh
ext_build/doc/: Makefile  boz_doxy.sh
ext_build/doc/doxygen/: Makefile
ext_build/doc/doxygen/config/: boz_api.doxy  rtd_api.doxy
ext_build/doc/doxygen/html/: index.html
ext_build/support/kconfig/: .directory  Makefile  Makefile.old  autoconf_tocmake.sh  autoconf_todoxy.sh  autoconf_tojson.sh  autoconf_toprojectenv.sh  autoconf_tostrconfig.sh  conf.c  confdata.c  createKconfig.sh  doc2json.conf  expr.c  expr.h  gconf.c  genconf.sh  images.c  kconfig_load.c  lex.zconf.c_shipped  lkc.h  lkc_defs.h  lkc_proto.h  mconf.c  menu.c  qconf.cc  qconf.h  qconf.moc  symbol.c  util.c  zconf.gperf  zconf.hash.c_shipped  zconf.l  zconf.tab.c_shipped  zconf.y
ext_build/support/kconfig/generic/: Kconfig.comp  Kconfig.test  Kconfig.trace
ext_build/support/kconfig/lxdialog/: checklist.c  dialog.h  inputbox.c  menubox.c  textbox.c  util.c  yesno.c
include/: discovery.h
package/: package.cmake  postinst
src/discovery/: CMakeLists.txt  init.c  internal.c  term.c
src/discovery/boz/: discovery_p.h  internal_p.h
src/discovery/inc/: bozdisco_shared.h
src/discovery/lib/: CMakeLists.txt  end.c  fd.c  geturi.c  init.c  internal.c  register.c  startf.c  term.c  unregister.c
src/discovery/lib/boz/: discovery_p.h  internal_p.h
src/discovery/svc/: CMakeLists.txt  addnode.c  bozdisco_svc_p.h  delnode.c  global.c  init.c  main.c  sync.c  term.c
test/: CMakeLists.txt
test/discovery/: CMakeLists.txt  basic.c  basic.cmake  cu_discovery.h  cu_geturi.c  cu_init_term.c  cu_main.c  cu_register.c  cu_suite.c  cu_unregister.c  cunit.cmake
test/tools/: CMakeLists.txt  publish.c  subscribe.c
thirdparties/: CMakeLists.txt
thirdparties/czmq/: CMakeLists.txt
thirdparties/libczmq/: CMakeLists.txt
thirdparties/libsodium/: CMakeLists.txt
thirdparties/libzeromq/: CMakeLists.txt
thirdparties/skalibs/: CMakeLists.txt
thirdparties/zeromq/: CMakeLists.txt
